{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 144,
  "lineage": "5122bc69-a290-dc2e-f4be-027714a35db5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "UBER_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0755d225fbf9c0550",
            "domain": "vpc",
            "id": "eipalloc-0755d225fbf9c0550",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-23-22-82-81.compute-1.amazonaws.com",
            "public_ip": "23.22.82.81",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "UBER-v1_EIP",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1_EIP",
              "Project": "UBER-v1"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "UBER-DB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8b4cd432b1c3063",
            "arn": "arn:aws:ec2:us-east-1:692695824450:instance/i-07b68cf232223ba88",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07b68cf232223ba88",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e45c8e3259035e7b",
            "private_dns": "ip-172-33-88-251.ec2.internal",
            "private_ip": "172.33.88.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01724e826eb2f5f26",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03825da45e5709314",
            "tags": {
              "Name": "UBER-v1-DB-SERVER",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-DB-SERVER",
              "Project": "UBER-v1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a8d48a6ffe792299"
            ]
          },
          "dependencies": [
            "aws_security_group.UBER-DB-SG",
            "aws_security_group.UBER-SSH-SG",
            "aws_security_group.UBER-WEB-SG",
            "aws_subnet.UBER-Private-1",
            "aws_vpc.Terraform-1",
            "data.aws_ami.AMI",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "UBER-SSH",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8b4cd432b1c3063",
            "arn": "arn:aws:ec2:us-east-1:692695824450:instance/i-0f25bd6aabe01e1d8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f25bd6aabe01e1d8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0400762c2e9314690",
            "private_dns": "ip-172-33-36-153.ec2.internal",
            "private_ip": "172.33.36.153",
            "public_dns": "ec2-34-238-137-36.compute-1.amazonaws.com",
            "public_ip": "34.238.137.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb29fee825d6f354",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-058e4c654fe265443",
            "tags": {
              "Name": "UBER-v1-SSH-SERVER",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-SSH-SERVER",
              "Project": "UBER-v1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e2dfa52cdabc197d"
            ]
          },
          "dependencies": [
            "aws_security_group.UBER-SSH-SG",
            "aws_subnet.UBER-Public-2",
            "aws_vpc.Terraform-1",
            "data.aws_ami.AMI",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "UBER-WEB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a8b4cd432b1c3063",
            "arn": "arn:aws:ec2:us-east-1:692695824450:instance/i-0ebb9e41749cb95cc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebb9e41749cb95cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Project",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02c0843b0dbf83b9e",
            "private_dns": "ip-172-33-19-28.ec2.internal",
            "private_ip": "172.33.19.28",
            "public_dns": "ec2-3-80-51-229.compute-1.amazonaws.com",
            "public_ip": "3.80.51.229",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0f9c5602ba8a21eda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06bbdaa8fac9cd050",
            "tags": {
              "Name": "UBER-v1-WEB-SERVER",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-WEB-SERVER",
              "Project": "UBER-v1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0964bd76b9674e791"
            ]
          },
          "dependencies": [
            "aws_security_group.UBER-SSH-SG",
            "aws_security_group.UBER-WEB-SG",
            "aws_subnet.UBER-Public-1",
            "aws_vpc.Terraform-1",
            "data.aws_ami.AMI",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "UBER_IIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:internet-gateway/igw-00b28c0c225a09367",
            "id": "igw-00b28c0c225a09367",
            "owner_id": "692695824450",
            "tags": {
              "Name": "UBER-v1_IGW_NEW",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1_IGW_NEW",
              "Project": "UBER-v1"
            },
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "dependencies": [
            "aws_vpc.Terraform-1"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "UBER_NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0755d225fbf9c0550",
            "connectivity_type": "public",
            "id": "nat-08dc19635a3d1dd82",
            "network_interface_id": "eni-0533906bd379ed22d",
            "private_ip": "172.33.19.139",
            "public_ip": "23.22.82.81",
            "subnet_id": "subnet-06bbdaa8fac9cd050",
            "tags": {
              "Name": "UBER-v1_NAT",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1_NAT",
              "Project": "UBER-v1"
            }
          },
          "dependencies": [
            "aws_eip.UBER_EIP",
            "aws_subnet.UBER-Public-1",
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "UBER-PRIVATE-RTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:route-table/rtb-0536b9659a878b760",
            "id": "rtb-0536b9659a878b760",
            "owner_id": "692695824450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08dc19635a3d1dd82",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UBER-v1-Private_RTB",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-Private_RTB",
              "Project": "UBER-v1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.UBER_EIP",
            "aws_nat_gateway.UBER_NAT",
            "aws_subnet.UBER-Public-1",
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "UBER-PUBLIC-RTB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:route-table/rtb-0593f40447e4d6b3b",
            "id": "rtb-0593f40447e4d6b3b",
            "owner_id": "692695824450",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b28c0c225a09367",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "UBER-v1-Public_RTB",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-Public_RTB",
              "Project": "UBER-v1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.UBER_IIGW",
            "aws_vpc.Terraform-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "UBER_PRIVATE-1_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072cace12df7438b2",
            "route_table_id": "rtb-0536b9659a878b760",
            "subnet_id": "subnet-03825da45e5709314"
          },
          "dependencies": [
            "aws_eip.UBER_EIP",
            "aws_nat_gateway.UBER_NAT",
            "aws_route_table.UBER-PRIVATE-RTB",
            "aws_subnet.UBER-Private-1",
            "aws_subnet.UBER-Public-1",
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "UBER_PRIVATE-2_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d5e2af08ce82456",
            "route_table_id": "rtb-0536b9659a878b760",
            "subnet_id": "subnet-04e33dca011215a15"
          },
          "dependencies": [
            "aws_eip.UBER_EIP",
            "aws_nat_gateway.UBER_NAT",
            "aws_route_table.UBER-PRIVATE-RTB",
            "aws_subnet.UBER-Private-2",
            "aws_subnet.UBER-Public-1",
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "UBER_PUBLIC-1_Associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044303d199870d2ec",
            "route_table_id": "rtb-0593f40447e4d6b3b",
            "subnet_id": "subnet-06bbdaa8fac9cd050"
          },
          "dependencies": [
            "aws_internet_gateway.UBER_IIGW",
            "aws_route_table.UBER-PUBLIC-RTB",
            "aws_subnet.UBER-Public-1",
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "UBER_PUBLIC-2_Association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03868fb5e3bb1604f",
            "route_table_id": "rtb-0593f40447e4d6b3b",
            "subnet_id": "subnet-058e4c654fe265443"
          },
          "dependencies": [
            "aws_internet_gateway.UBER_IIGW",
            "aws_route_table.UBER-PUBLIC-RTB",
            "aws_subnet.UBER-Public-2",
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UBER-DB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:security-group/sg-0a8d48a6ffe792299",
            "description": "DB Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8d48a6ffe792299",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "DB",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0964bd76b9674e791"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dfa52cdabc197d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "UBER-v1-DB",
            "name_prefix": "",
            "owner_id": "692695824450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UBER-v1-DB",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-DB",
              "Project": "UBER-v1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.UBER-SSH-SG",
            "aws_security_group.UBER-WEB-SG",
            "aws_vpc.Terraform-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UBER-SSH-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:security-group/sg-0e2dfa52cdabc197d",
            "description": "SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2dfa52cdabc197d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "UBER-v1-SSH",
            "name_prefix": "",
            "owner_id": "692695824450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UBER-v1-SSH_Server",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-SSH_Server",
              "Project": "UBER-v1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Terraform-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "UBER-WEB-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:security-group/sg-0964bd76b9674e791",
            "description": "Webserver Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0964bd76b9674e791",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e2dfa52cdabc197d"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "UBER-v1-WEB",
            "name_prefix": "",
            "owner_id": "692695824450",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "UBER-v1-WEB",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER-v1-WEB",
              "Project": "UBER-v1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.UBER-SSH-SG",
            "aws_vpc.Terraform-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "UBER-Private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:subnet/subnet-03825da45e5709314",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.33.64.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03825da45e5709314",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692695824450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Development",
              "Name": "UBER-v1_Private-1",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "UBER-v1_Private-1",
              "Project": "UBER-v1"
            },
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "dependencies": [
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "UBER-Private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:subnet/subnet-04e33dca011215a15",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.33.96.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e33dca011215a15",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "692695824450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "Name": "UBER-v1_Private-2",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Env": "Production",
              "Name": "UBER-v1_Private-2",
              "Project": "UBER-v1"
            },
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "dependencies": [
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "UBER-Public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:subnet/subnet-06bbdaa8fac9cd050",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.33.0.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06bbdaa8fac9cd050",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692695824450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Development",
              "Name": "UBER-v1_Public-1",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Env": "Development",
              "Name": "UBER-v1_Public-1",
              "Project": "UBER-v1"
            },
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "dependencies": [
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "UBER-Public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:subnet/subnet-058e4c654fe265443",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.33.32.0/19",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058e4c654fe265443",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "692695824450",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "Name": "UBER-v1_Public-2",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Env": "Production",
              "Name": "UBER-v1_Public-2",
              "Project": "UBER-v1"
            },
            "vpc_id": "vpc-0596ad687dad9aab0"
          },
          "dependencies": [
            "aws_vpc.Terraform-1",
            "data.aws_availability_zones.zone-name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Terraform-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:692695824450:vpc/vpc-0596ad687dad9aab0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.33.0.0/16",
            "default_network_acl_id": "acl-0e75e95544f1367db",
            "default_route_table_id": "rtb-0ed779f91bff07eaf",
            "default_security_group_id": "sg-0bcbf8f4b5708bd93",
            "dhcp_options_id": "dopt-0df4fb5b0db5a5240",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0596ad687dad9aab0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ed779f91bff07eaf",
            "owner_id": "692695824450",
            "tags": {
              "Name": "UBER",
              "Project": "UBER-v1"
            },
            "tags_all": {
              "Name": "UBER",
              "Project": "UBER-v1"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}